# litparse-rapidocr

./: .gitignore  README.md  ocrapi.py  pyproject.toml  server.py
